--- a/nginx.conf/conf/nginx.conf
+++ b/nginx.conf/conf/nginx.conf
@@ -30,14 +30,57 @@ http {
 
     #access_log  logs/access.log  main;
 
+    # chunked_transfer_encoding on; 可以开启或者关闭chunk模式，默认是开启的on | off。
+
+    # 使用字段：http, server, location
+    client_body_buffer_size 16k;            # 这个指令可以指定连接请求使用的缓冲区大小。
+    client_body_in_single_buffer off;       # 指定将一个完整的连接请求放入缓冲区，当使用$request_body时推荐使用这个指令以减少复制操作。
+    # client_body_in_single_buffer
+    # client_body_temp_path
+    # client_body_timeout
+    # client_header_buffer_size
+    client_header_buffer_size 1k;           # 使用字段：http, server # 这个指令指定客户端请求的http头部缓冲区大小绝大多数情况下一个头部请求的大小不会大于1k不过如果有
+    # client_header_timeout
+    client_max_body_size 1M;                # 如果请求大于指定的值，客户端将收到一个"Request Entity Too Large" (413)错误。
+    
+    ## connection_pool_size 512             # Allows accurate tuning of per-connection memory allocations. This directive has minimal impact on performance and should not generally be used. By default, the size is equal to 256 bytes on 32-bit platforms and 512 bytes on 64-bit platforms.
+    ## directio
+    ## directio_alignment 
+
+    disable_symlinks off;                   # off on if_not_owner from=part
+
+    # Context:	http, server, location, if in location
+    error_page 404             /404.html;
+    error_page 500 502 503 504 /50x.html;
+
+    # etag on;                              # Enables or disables automatic generation of the “ETag” response header field for static resources.
+
+    # if_modified_since                     # if_modified_since off | exact | before;
+
+    # ignore_invalid_headers on | off;
+
+    keepalive_disable               none;   # Disables keep-alive connections with misbehaving browsers.
+    keepalive_requests              100;    # Sets the maximum number of requests that can be served through one keep-alive connection.
+    keepalive_timeout               120;    # The first parameter sets a timeout during which a keep-alive client connection will stay open on the server side.
+
+    large_client_header_buffers 4 64k;      # 使用字段：http, server 指令指定客户端请求的一些比较大的头文件到缓冲区的最大值，如果一个请求的URI大小超过这个值，服务器将返回一个"Request URI too large" (414)，同样，如果一个请求的头部字段大于这个值，服务器 将返回"Bad request" (400)。
+    
+    limit_rate 0;                           # Limits the rate of response transmission to a client. set $limit_rate 4k;
+    limit_rate_after 1024k;                 # Sets the initial amount after which the further transmission of a response to a client will be rate limited.
+
+    ## lingering_close on;                  # Controls how nginx closes client connections.
+    ## lingering_time 30s;
+    ## lingering_timeout 5s;
+
+    open_file_cache          max=1000 inactive=20s;
+    open_file_cache_valid    30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors   on;
+
     server_names_hash_bucket_size   128;    #服务器名字的hash表大小
-    client_header_buffer_size       32k;    #上传文件大小限制
-    large_client_header_buffers     4 64k;  #设定请求缓
-    client_max_body_size            8m;     #设定请求缓
     autoindex                       off;    #开启目录列表访问，合适下载服务器，默认关闭。
     tcp_nopush                      on;     #防止网络阻塞
     tcp_nodelay                     on;     #防止网络阻塞
-    keepalive_timeout               120;    #长连接超时时间，单位是秒
 
     #开启高效文件传输模式，
     #sendfile指令指定nginx是否调用sendfile函数来输出文件，对于普通应用设为 on，
@@ -118,7 +161,19 @@ http {
          proxy_set_header   X-Forwarded-For   $remote_addr;  
          proxy_pass         http://backend_server;  
          expires            1d;  
-        }  
+        }
+
+        location /internal
+        {
+            internal; # Specifies that a given location can only be used for internal requests.
+        }
+
+        location /limit {
+            limit_except GET {
+                allow 192.168.1.0/32;
+                deny  all;
+            }
+        }
     }
 
     server {
