add ssl directive

--- a/nginx.conf/conf/nginx.conf
+++ b/nginx.conf/conf/nginx.conf
@@ -19,6 +19,31 @@ http {
     default_type  application/octet-stream;
     charset       utf-8;
 
+    ssl                         on; # off | http, server
+    ssl_buffer_size             16k;
+    ssl_certificate             example.com.rsa.crt;
+    ssl_certificate_key         example.com.rsa.key;
+    ssl_certificate             example.com.ecdsa.crt;
+    ssl_certificate_key         example.com.ecdsa.key;
+    ssl_ciphers                 AES128-SHA:AES256-SHA:RC4-SHA:DES-CBC3-SHA:RC4-MD5;
+    ssl_crl                     file;
+    ssl_dhparam                 file;	
+    ssl_ecdh_curve              auto;
+    ssl_password_file           file;
+    ssl_prefer_server_ciphers   off;
+    ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
+    ssl_session_cache           shared:SSL:10m;
+    ssl_session_ticket_key      file;
+    ssl_session_tickets         on;
+    ssl_session_timeout         10m;
+    ssl_stapling                off;
+    ssl_stapling_file           file;
+    ssl_stapling_responder      url;
+    ssl_stapling_verify         off;
+    ssl_trusted_certificate     file; 	
+    ssl_verify_client           off;	
+    ssl_verify_depth            1;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
