--- a/nginx.conf/conf/nginx.conf
+++ b/nginx.conf/conf/nginx.conf
@@ -19,30 +19,31 @@ http {
     default_type  application/octet-stream;
     charset       utf-8;
 
-    ssl                         on; # off | http, server
-    ssl_buffer_size             16k;
-    ssl_certificate             example.com.rsa.crt;
-    ssl_certificate_key         example.com.rsa.key;
-    ssl_certificate             example.com.ecdsa.crt;
-    ssl_certificate_key         example.com.ecdsa.key;
-    ssl_ciphers                 AES128-SHA:AES256-SHA:RC4-SHA:DES-CBC3-SHA:RC4-MD5;
-    ssl_crl                     file;
-    ssl_dhparam                 file;	
-    ssl_ecdh_curve              auto;
-    ssl_password_file           file;
-    ssl_prefer_server_ciphers   off;
-    ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
-    ssl_session_cache           shared:SSL:10m;
-    ssl_session_ticket_key      file;
-    ssl_session_tickets         on;
-    ssl_session_timeout         10m;
-    ssl_stapling                off;
-    ssl_stapling_file           file;
-    ssl_stapling_responder      url;
-    ssl_stapling_verify         off;
-    ssl_trusted_certificate     file; 	
-    ssl_verify_client           off;	
-    ssl_verify_depth            1;
+    # SSL configuration
+    # ssl                         on; # off | http, server
+    # ssl_buffer_size             16k;
+    # ssl_certificate             example.com.rsa.crt;
+    # ssl_certificate_key         example.com.rsa.key;
+    # ssl_certificate             example.com.ecdsa.crt;
+    # ssl_certificate_key         example.com.ecdsa.key;
+    # ssl_ciphers                 AES128-SHA:AES256-SHA:RC4-SHA:DES-CBC3-SHA:RC4-MD5;
+    # ssl_crl                     file;
+    # ssl_dhparam                 file;	
+    # ssl_ecdh_curve              auto;
+    # ssl_password_file           file;
+    # ssl_prefer_server_ciphers   off;
+    # ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
+    # ssl_session_cache           shared:SSL:10m;
+    # ssl_session_ticket_key      file;
+    # ssl_session_tickets         on;
+    # ssl_session_timeout         10m;
+    # ssl_stapling                off;
+    # ssl_stapling_file           file;
+    # ssl_stapling_responder      url;
+    # ssl_stapling_verify         off;
+    # ssl_trusted_certificate     file; 	
+    # ssl_verify_client           off;	
+    # ssl_verify_depth            1;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
@@ -53,7 +54,7 @@ http {
                              '$status $upstream_cache_status $body_bytes_sent "$http_referer" '
                              '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    # access_log  logs/access.log  main;
 
     # chunked_transfer_encoding on; 可以开启或者关闭chunk模式，默认是开启的on | off。
 
@@ -138,7 +139,7 @@ http {
     #proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
 
     #$upstream_cache_status表示资源缓存的状态，有HIT MISS EXPIRED三种状态
-    #add_header X-Cache $upstream_cache_status;
+    # add_header X-Cache $upstream_cache_status;
     add_header X-Cache '$upstream_cache_status from $server_addr';
 
     #gzip模块设置
@@ -159,37 +160,34 @@ http {
     include vhosts/*.conf;
     
     upstream backend_server {  
-        server   127.0.0.43:80 weight=1 max_fails=2 fail_timeout=30s;  
-        server   127.0.0.44:80 weight=1 max_fails=2 fail_timeout=30s;  
-        server   127.0.0.45:80 weight=1 max_fails=2 fail_timeout=30s;  
-    } 
+        server   127.0.0.1:8081 weight=1 max_fails=2 fail_timeout=30s;  
+        server   127.0.0.2:8082 weight=1 max_fails=2 fail_timeout=30s;  
+        server   127.0.0.3:8083 weight=1 max_fails=2 fail_timeout=30s;  
+    }
 
-    server  
-    {  
-         listen       80;  
-         server_name   www.domain.com 127.0.0.42;
-         index index.html index.htm;  
-         root   /data0/htdocs/www;    
+    server {
+         listen         80;
+         server_name    www.domain.com 127.0.0.42;
+         index          index.html index.htm;
+         root           /data0/htdocs/www;
      
-        location /  
-        {  
-         #如果后端的服务器返回502、504、执行超时等错误，自动将请求转发到upstream负载均衡池中的另一台服务器，实现故障转移。  
-         proxy_next_upstream http_502 http_504 error timeout invalid_header;
-         
-         proxy_cache cache_one;
-         #对不同的HTTP状态码设置不同的缓存时间  
-         proxy_cache_valid   200 304 12h;
-         #以域名、URI、参数组合成Web缓存的Key值，Nginx根据Key值哈希，存储缓存内容到二级缓存目录内
-         proxy_cache_key $host$uri$is_args$args;
-         
-         proxy_set_header   Host              $host;  
-         proxy_set_header   X-Forwarded-For   $remote_addr;  
-         proxy_pass         http://backend_server;  
-         expires            1d;  
+        location / {  
+            #如果后端的服务器返回502、504、执行超时等错误，自动将请求转发到upstream负载均衡池中的另一台服务器，实现故障转移。  
+            proxy_next_upstream http_502 http_504 error timeout invalid_header;
+            
+            proxy_cache cache_one;
+            #对不同的HTTP状态码设置不同的缓存时间  
+            proxy_cache_valid   200 304 12h;
+            #以域名、URI、参数组合成Web缓存的Key值，Nginx根据Key值哈希，存储缓存内容到二级缓存目录内
+            proxy_cache_key $host$uri$is_args$args;
+            
+            proxy_set_header   Host              $host;  
+            proxy_set_header   X-Forwarded-For   $remote_addr;  
+            proxy_pass         http://backend_server;  
+            expires            1d;  
         }
 
-        location /internal
-        {
+        location /internal {
             internal; # Specifies that a given location can only be used for internal requests.
         }
 
@@ -214,7 +212,7 @@ http {
             index  index.html index.htm;
         }
 
-        #error_page  404              /404.html;
+        # error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
@@ -225,62 +223,62 @@ http {
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
+        # location ~ \.php$ {
+        #     proxy_pass   http://127.0.0.1;
+        # }
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
+        # location ~ \.php$ {
+        #     root           html;
+        #     fastcgi_pass   127.0.0.1:9000;
+        #     fastcgi_index  index.php;
+        #     fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+        #     include        fastcgi_params;
+        # }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        # location ~ /\.ht {
+        #     deny  all;
+        # }
     }
 
 
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
+    #  another virtual host using mix of IP-, name-, and port-based configuration
+    # 
+    # server {
+    #     listen       8000;
+    #     listen       somename:8080;
+    #     server_name  somename  alias  another.alias;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+    #     location / {
+    #         root   html;
+    #         index  index.html index.htm;
+    #     }
+    # }
 
 
     # HTTPS server
     #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+    # server {
+    #     listen       443 ssl;
+    #     server_name  localhost;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+    #     ssl_certificate      cert.pem;
+    #     ssl_certificate_key  cert.key;
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+    #     ssl_session_cache    shared:SSL:1m;
+    #     ssl_session_timeout  5m;
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+    #     ssl_ciphers  HIGH:!aNULL:!MD5;
+    #     ssl_prefer_server_ciphers  on;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+    #     location / {
+    #         root   html;
+    #         index  index.html index.htm;
+    #     }
+    # }
 }
 
