--- a/nginx.conf/conf/nginx.conf
+++ b/nginx.conf/conf/nginx.conf
@@ -1,16 +1,19 @@
+# Nginx Config File
 
 #user  nobody;
-worker_processes  4;
+user   www-data;
+pid    logs/nginx.pid;
+worker_processes  4;         # 定义了nginx对外提供web服务时的worder进程数。 (设置为“auto”将尝试自动检测它)
+worker_rlimit_nofile 100000; # 更改worker进程的最大打开文件数限制。如果没设置的话，这个值为操作系统的限制。
 
 error_log  logs/error.log;
 error_log  logs/error.log  notice;
 error_log  logs/error.log  info;
 
-#pid        logs/nginx.pid;
-
 events {
     use epoll;
     worker_connections  655350;
+    multi_accept        on; # 告诉nginx收到一个新连接通知后接受尽可能多的连接。
 }
 
 http {
@@ -19,7 +22,9 @@ http {
     default_type  application/octet-stream;
     charset       utf-8;
 
-    # SSL configuration
+    server_tokens off; # server_tokens 关闭在错误页面中的nginx版本数字，这样对于安全性是有好处的。
+
+    ## SSL configuration
     # ssl                         on; # off | http, server
     # ssl_buffer_size             16k;
     # ssl_certificate             example.com.rsa.crt;
@@ -51,12 +56,28 @@ http {
 
 
     log_format  main_static  '$remote_addr - $remote_user [$time_local] "$request" '
-                             '$status $upstream_cache_status $body_bytes_sent "$http_referer" '
+                             '$status $upstream_cache_status $body_bytes_sent "$http_referer" "$gzip_ratio" '
                              '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # access_log  logs/access.log  main;
+    log_format main_json '{'
+                          '"time": "$time_iso8601", '
+                          '"remote_addr": "$remote_addr", '
+                          '"body_bytes_sent": "$body_bytes_sent", '
+                          '"gzip_ratio": "$gzip_ratio", '
+                          '"status": "$status", '
+                          '"request": "$request_time", '
+                          '"request_method": "$request_method", '
+                          '"http_referrer": "$http_referer", '
+                          '"http_user_agent": "$http_user_agent", '
+                          '"http_x_forwarded_for": "$http_x_forwarded_for", '
+                          '"request_time": "$request_time", '
+                          '"upstream_cache_status": "$upstream_cache_status", '
+                          '"upstream_response_time": "$upstream_response_time"'
+                          '}';                         
 
-    # chunked_transfer_encoding on; 可以开启或者关闭chunk模式，默认是开启的on | off。
+    access_log  logs/access.log  main;
+
+    # chunked_transfer_encoding on;         # 可以开启或者关闭chunk模式，默认是开启的on | off。
 
     # 使用字段：http, server, location
     client_body_buffer_size 16k;            # 这个指令可以指定连接请求使用的缓冲区大小。
@@ -67,7 +88,7 @@ http {
     # client_header_buffer_size
     client_header_buffer_size 1k;           # 使用字段：http, server # 这个指令指定客户端请求的http头部缓冲区大小绝大多数情况下一个头部请求的大小不会大于1k不过如果有
     # client_header_timeout
-    client_max_body_size 1M;                # 如果请求大于指定的值，客户端将收到一个"Request Entity Too Large" (413)错误。
+    client_max_body_size 32M;               # 如果请求大于指定的值，客户端将收到一个"Request Entity Too Large" (413)错误。
     
     ## connection_pool_size 512             # Allows accurate tuning of per-connection memory allocations. This directive has minimal impact on performance and should not generally be used. By default, the size is equal to 256 bytes on 32-bit platforms and 512 bytes on 64-bit platforms.
     ## directio
@@ -108,15 +129,15 @@ http {
     tcp_nopush                      on;     #防止网络阻塞
     tcp_nodelay                     on;     #防止网络阻塞
 
-    #开启高效文件传输模式，
-    #sendfile指令指定nginx是否调用sendfile函数来输出文件，对于普通应用设为 on，
-    #如果用来进行下载等应用磁盘IO重负载应用，可设置为off，
-    #以平衡磁盘与网络I/O处理速度，降低系统的负载。
-    #注意：如果图片显示不正常把这个改成off。
+    # 开启高效文件传输模式，
+    # sendfile指令指定nginx是否调用sendfile函数来输出文件，对于普通应用设为 on，
+    # 如果用来进行下载等应用磁盘IO重负载应用，可设置为off，
+    # 以平衡磁盘与网络I/O处理速度，降低系统的负载。
+    # 注意：如果图片显示不正常把这个改成off。
     sendfile                        on;
 
-    #FastCGI相关参数是为了改善网站的性能：
-    #减少资源占用，提高访问速度。下面参数看字面意思都能理解。
+    ## FastCGI相关参数是为了改善网站的性能：
+    # 减少资源占用，提高访问速度。下面参数看字面意思都能理解。
     fastcgi_connect_timeout         300;
     fastcgi_send_timeout            300;
     fastcgi_read_timeout            300;
@@ -125,7 +146,7 @@ http {
     fastcgi_busy_buffers_size       128k;
     fastcgi_temp_file_write_size    128k;
 
-    ##cache##
+    ## cache
     proxy_connect_timeout       5;
     proxy_read_timeout          60;
     proxy_send_timeout          5;
@@ -135,70 +156,38 @@ http {
     proxy_temp_file_write_size  128k;
     proxy_temp_path             /raid/nginx/temp_dir;
     proxy_cache_path            /raid/nginx/cache levels=1:2 keys_zone=cache_one:200m inactive=1d max_size=30g;
-    ##end##
-    #proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
 
-    #$upstream_cache_status表示资源缓存的状态，有HIT MISS EXPIRED三种状态
+    # proxy_set_header
+    proxy_set_header    Host            $host;
+    proxy_set_header    X-Real-IP       $remote_addr;
+    proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    # proxy_next_upstream error timeout invalid_header http_500 http_503 http_502 http_504;  # 连接有问题是增加失败次数
+    # proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
+    # $upstream_cache_status表示资源缓存的状态，有HIT MISS EXPIRED三种状态
     # add_header X-Cache $upstream_cache_status;
     add_header X-Cache '$upstream_cache_status from $server_addr';
 
     #gzip模块设置
-    gzip                on;     #开启gzip压缩输出
-    gzip_proxied        any;    #nginx 做前端代理时启用该选项，表示无论后端服务器的headers头返回什么信息，都无条件启用压缩
-    gzip_min_length     1k;     #最小压缩文件大小
-    gzip_buffers        4 16k;  #压缩缓冲区
-    gzip_http_version   1.0;    #压缩版本（默认1.1，前端如果是squid2.5请使用1.0）
-    gzip_comp_level     2;      #压缩等级
-    #压缩类型，默认就已经包含text/html，所以下面就不用再写了，写上去也不会有问题，但是会有一个warn。
-    #gzip_types text/plain application/x-javascript text/css application/xml;
-    gzip_types text/plain application/x-javascript text/css text/javascript application/x-httpd-php image/jpeg image/gif image/png;
-    #gzip_vary on;
-    gzip_disable "MSIE [1-6]\."; #IE6对Gzip不怎么友好，不给它Gzip了
+    gzip                on;             # 开启gzip压缩输出
+    gzip_buffers        4 16k;          # 压缩缓冲区
+    gzip_comp_level     6;              # 压缩等级
+    gzip_disable        "MSIE [1-6]\."; #IE6对Gzip不怎么友好，不给它Gzip了
+    gzip_min_length     1k;             # 最小压缩文件大小， determined only from the “Content-Length” response header field.
+    gzip_http_version   1.0;            # 压缩版本（默认1.1，前端如果是squid2.5请使用1.0）
+    gzip_proxied        any;            # 无条件启用压缩 gzip_proxied off | expired | no-cache | no-store | private | no_last_modified | no_etag | auth | any ...;
+    gzip_types          text/plain text/xml text/css application/x-javascript text/javascript application/xml+rss text/json application/json; # image/jpeg image/gif image/png
+    gzip_vary           on;             # 根据客户端的HTTP “User-Agent来判断，是否需要压缩
 
-    #limit_zone crawler $binary_remote_addr 10m; #开启限制IP连接数的时候需要使用
+    ## gzip_static 此模块的作用就是在接到请求后，会先到到url相同的路径的文件系统去找扩展名为“.gz”的文件。 如：style.css -> style.css.gz
+    # 这个模块不受gzip_types限制，对所有请求有效。所以不要在全局上使用，只在局部我们确认有.gz的目录中使用。 
+    # Nginx不会自动的将压缩结果写入文件系统，所以如果想使用static_gzip模块，需要自己写提供.gz文件。
+    gzip_static         off; # to serve pre-gzipped version  
+
+    #limit_zone crawler $binary_remote_addr 10m; # 开启限制IP连接数的时候需要使用
 
     include vhosts/*.conf;
     
-    upstream backend_server {  
-        server   127.0.0.1:8081 weight=1 max_fails=2 fail_timeout=30s;  
-        server   127.0.0.2:8082 weight=1 max_fails=2 fail_timeout=30s;  
-        server   127.0.0.3:8083 weight=1 max_fails=2 fail_timeout=30s;  
-    }
-
-    server {
-         listen         80;
-         server_name    www.domain.com 127.0.0.42;
-         index          index.html index.htm;
-         root           /data0/htdocs/www;
-     
-        location / {  
-            #如果后端的服务器返回502、504、执行超时等错误，自动将请求转发到upstream负载均衡池中的另一台服务器，实现故障转移。  
-            proxy_next_upstream http_502 http_504 error timeout invalid_header;
-            
-            proxy_cache cache_one;
-            #对不同的HTTP状态码设置不同的缓存时间  
-            proxy_cache_valid   200 304 12h;
-            #以域名、URI、参数组合成Web缓存的Key值，Nginx根据Key值哈希，存储缓存内容到二级缓存目录内
-            proxy_cache_key $host$uri$is_args$args;
-            
-            proxy_set_header   Host              $host;  
-            proxy_set_header   X-Forwarded-For   $remote_addr;  
-            proxy_pass         http://backend_server;  
-            expires            1d;  
-        }
-
-        location /internal {
-            internal; # Specifies that a given location can only be used for internal requests.
-        }
-
-        location /limit {
-            limit_except GET {
-                allow 192.168.1.0/32;
-                deny  all;
-            }
-        }
-    }
-
     server {
         listen       80;
         server_name  localhost;
